--- a/styles/styles.css
+++ b/styles/styles.css
@@ -31,8 +31,6 @@
 
 }
 
-
-
 .temp-unit {
 	margin: 0 auto;
 	font-weight: 600;
@@ -80,11 +78,11 @@
 	font-size:15px;
 }
 
-
-
 .degree-sign {
 	font-size:15px;
 }
+
+
 /* Tags */
 main {
 	background-image: url("../images/weather-background.svg");
@@ -103,45 +101,7 @@ header {
 
 /* Modal */
 
-.modal-btn {
-	margin-top: 2rem;
-	background: var(--clr-primary-5);
-	border-color: var(--clr-primary-5);
-	color: var(--clr-white);
-  }
-  .modal-btn:hover {
-	background: transparent;
-	color: var(--clr-primary-5);
-  }
-
-  .modal-pointer {
-	  border-top: 50px transparent solid;
-	  border-right:50px transparent solid;
-	  border-bottom: 50px  rgb(255, 255, 255) solid;
-	  border-left:50px transparent solid;
-	  width:0px;
-	  position:relative;
-	  bottom:100px;
-	  left:33px;
-  }
-
-  .popup {
-	  display:none;
-	  position:absolute;
-	  margin-top:5px;
-	  transition: var(--transition);
-  }
-
-  .popup-show{
-	  display: block;
-  }
-
-  /* OPEN/CLOSE MODAL */
-  .open-modal {
-	visibility: visible;
-	z-index: 10;
-  }
-  .modal-container {
+.modal-container {
 	background: white;
 	border-radius: var(--radius);
 	width: fit-content;
@@ -177,17 +137,29 @@ header {
 	margin: 10px 50px 20px 50px;
   }
 
-  .form {
-	  width:fit-content;
-	  margin:0 auto;
-	  margin-bottom: 13px;
-  }
-
+  /* OPEN/CLOSE MODAL */
   .open-modal {
 	visibility: visible;
 	z-index: 12;
   }
 
+  .modal-btn {
+	margin-top: 2rem;
+	background: var(--clr-primary-5);
+	border-color: var(--clr-primary-5);
+	color: var(--clr-white);
+  }
+  .modal-btn:hover {
+	background: transparent;
+	color: var(--clr-primary-5);
+  }
+
+
+  .form {
+	  width:fit-content;
+	  margin:0 auto;
+	  margin-bottom: 13px;
+  }
 
   .close-btn {
 	position: absolute;
@@ -276,9 +248,6 @@ header {
 	color:#d72f2f;
 }
 
-.loading-screen {
-	visibility: visible;
-}
 
 .loading-screen-modal {
 	width: 100%;
@@ -287,7 +256,6 @@ header {
 }
 
 .preloader {
-	
 	background: transparent;
 	display: flex;
 	height: fit-content;
@@ -295,11 +263,6 @@ header {
 	margin:0 auto;
 	transition: opacity 0.3s linear;
 	z-index: 9999;
-  }
-
-.close-modal {
-	display: none;
-	position: absolute;
 }
 
 .warning {
@@ -526,32 +489,6 @@ header {
 	text-transform:none;
 }
 
-
-.timer {
-	height:fit-content;
-	width: fit-content;
-	position: relative;
-	top:50px;
-	left: 260px;
-	font-size: 50px;
-	font-weight: 200;
-	color:white;
-}
-
-
-
-.below-timer-icon {
-	width:20px;
-	height:20px;
-	margin-right:15px;
-	transition: var(--transition);
-}
-
-.below-timer-icon:hover {
-	transform: scale(1.3);
-}
-
-
 .weather-info {
 	display: flex;
 	justify-content: center;
@@ -559,18 +496,9 @@ header {
 }
 
 .condition {
-	margin-right:15px;
-	margin-top:10px;
+	margin: 10px 30px;
 	font-size:30px;
 }
-
-.forecast {
-	font-size:30px;
-}
-.date {
-	margin-right:15px;
-}
-
 
 .attribution {
 	margin:0  auto;
