--- a/styles/styles.css
+++ b/styles/styles.css
@@ -114,27 +114,78 @@ header {
 	bottom:140px;
   }
 
+  /*For mobile set background: white
+
+  On location-modal, set font size: 90px
+  for tablet, font-size:60px
+  On allow location text set position:relative,
+  bottom:550px and text-align:center 
+  On preloader set height:800px, position:relative,
+  bottom:750px, right:100px; margin-top:100px
+  */
   .modal-overlay {
 	position: fixed;
 	top: 0;
 	left: 0;
 	width: 100%;
 	height: 100%;
-	background: rgba(0, 0, 0, 50%);
+	background: white;
 	display: grid;
 	place-items: center;
 	transition: var(--transition);
 	visibility: visible;
 	z-index: 12;
-	backdrop-filter: blur(10px) saturate(180%);
-    -webkit-backdrop-filter: blur(16px) saturate(180%);
-	background-color: rgb(16 19 24 / 75%);
+	font-size:90px;
+
   }
 
   .logo-modal {
 	position: relative;
     left: 130px;
 	margin: 10px 50px 20px 50px;
+  }
+
+  .loading-screen-modal {
+	width: 100%;
+	height: 300px;
+	position: static;
+	font-size:60px;
+}
+
+.preloader {
+	background: transparent;
+	display: flex;
+	height: 800px;
+	width: fit-content;
+	margin:0 auto;
+	transition: opacity 0.3s linear;
+	z-index: 9999;
+	position:relative;
+	bottom:750px;
+	right:100px;
+	margin-top:100px;
+}
+
+.allow-location-text {
+	position:relative;
+	bottom:550px;
+	text-align:center;
+}
+
+  @media screen and (min-width:820px){
+	  .preloader {
+		  position: static;
+		  margin-top:0;
+	  }
+
+	  .allow-location-text {
+		position:static;
+		text-align:unset;
+	}
+
+	  .loading-screen-modal {
+		  font-size: inherit;
+	  }
   }
 
   /* OPEN/CLOSE MODAL */
@@ -249,21 +300,7 @@ header {
 }
 
 
-.loading-screen-modal {
-	width: 100%;
-	height: 300px;
-	position: static;
-}
 
-.preloader {
-	background: transparent;
-	display: flex;
-	height: fit-content;
-	width: fit-content;
-	margin:0 auto;
-	transition: opacity 0.3s linear;
-	z-index: 9999;
-}
 
 .warning {
 	width:150px;
